# esp-ota-nostd

./: Cargo.toml
src/: error.rs  lib.rs  ota_data.rs  ota_data_structs.rs  partitions.rs
