[package]
name = "esp-ota-nostd"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Brouwer <jonathantbrouwer@gmail.com>", "Anne Stijns <anstijns@gmail.com>"]
license = "MIT"

[dependencies]
portable-atomic = { version = "1.6", default-features = false, features = ["require-cas"] }
esp-partition-table = "0.1"
crc = "3.2"
embedded-io-async = "0.6"
embedded-storage = "0.3"
log = { version = "0.4.21", default-features = false }